--- a/package.json
+++ b/package.json
@@ -9,5 +9,8 @@
   "dependencies": {
     "express": "^4.17.1",
     "body-parser": "^1.19.0"
+  },
+  "devDependencies": {
+    "eslint": "^8.0.0"
   }
 }
